--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "lint": "tslint --format stylish --project .",
+    "build": "shx rm -rf ./dist/* && tsc",
+    "lint": "eslint --fix --config .config/eslint.mjs",
     "test": "jest --config",
-    "prepare": "husky install"
+    "playground": "node playground/index.js"
   },
   "keywords": [
     "graphql",
@@ -31,29 +30,16 @@
   },
   "homepage": "https://github.com/atulmy/gql-query-builder",
   "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "husky": "^8.0.1",
-    "jest": "28.1.3",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "ts-jest": "^28.0.7",
-    "tslint": "^6.1.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "^4.7.4"
-  },
-  "lint-staged": {
-    "*.{ts}": [
-      "npm run lint -- --fix",
-      "git add"
-    ],
-    "*.{ts,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
+    "@stylistic/eslint-plugin": "^2.6.4",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^9.9.0",
+    "jest": "29.7.0",
+    "shx": "^0.3.4",
+    "ts-jest": "^29.2.4",
+    "typescript": "^5.5.4"
   },
   "jest": {
     "preset": "ts-jest"
-  },
-  "dependencies": {}
+  }
 }
