--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
+    "target": "ES6",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
+    "module": "ESNext",                       /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
+    "outDir": "./dist",                      /* Redirect output structure to the directory. */
+    "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
+    "allowSyntheticDefaultImports": true,     /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
+    "allowJs": true,
     "declaration": true,
-    "module": "commonjs",
-    "lib": ["es6", "es2017"],
-    "target": "es5",
-    "strict": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "outDir": "build",
-    "typeRoots": ["node_modules/@types"],
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true
+    "emitDeclarationOnly": false,
+    "declarationMap": true,
+    "resolveJsonModule": true,
+    "removeComments": true,
+    "lib": ["ESNext"]
   },
-  "include": ["src/**/*.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "dist"],
+  "include": ["src/**/*"]
 }
