--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "declarationMap": true,
     "resolveJsonModule": true,
     "removeComments": true,
+    "esModuleInterop": true,
     "lib": ["ESNext"]
   },
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
