--- a/playground/package.json
+++ b/playground/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "license": "MIT",
   "keywords": [],
-  "main": "index.ts",
+  "main": "index.js",
   "type": "module",
   "dependencies": {
     "gql-query-builder": "workspace:*"
