--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "lib": ["ESNext"]
   },
   "exclude": ["node_modules", "**/*.test.ts", "dist"],
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "test/index.test.ts"]
 }
